--- a/project_2/rag_chatbot.ipynb
+++ b/project_2/rag_chatbot.ipynb
@@ -91,10 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "65b49fcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/rag-chatbot/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Libraries imported! You're good to go!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard libraries for file handling and text processing\n",
     "import os, pathlib, textwrap, glob\n",
@@ -158,17 +174,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9ff055a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring wrong pointing object 81 0 (offset 0)\n",
+      "Ignoring wrong pointing object 76 0 (offset 0)\n",
+      "Ignoring wrong pointing object 80 0 (offset 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 8 PDF pages from 4 files.\n"
+     ]
+    }
+   ],
    "source": [
     "pdf_paths = glob.glob(\"data/Everstorm_*.pdf\")\n",
     "raw_docs = []\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
+    "for pdf_path in pdf_paths:\n",
+    "    raw_docs.extend(PyPDFLoader(pdf_path).load())\n",
     "\n",
     "print(f\"Loaded {len(raw_docs)} PDF pages from {len(pdf_paths)} files.\")"
    ]
@@ -188,32 +220,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "65abec32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched 2 documents from the web.\n"
+     ]
+    }
+   ],
    "source": [
     "URLS = [\n",
     "    # --- BigCommerce – shipping & refunds ---\n",
     "    \"https://developer.bigcommerce.com/docs/store-operations/shipping\",\n",
     "    \"https://developer.bigcommerce.com/docs/store-operations/orders/refunds\",\n",
     "    # --- Stripe – disputes & chargebacks ---\n",
-    "    # \"https://docs.stripe.com/disputes\",  \n",
+    "    #\"https://www.bseindia.com/xml-data/corpfiling/AttachHis/61b3ea1d-18e9-4a4a-80b8-be3cb0949f65.pdf\",  \n",
     "    # --- WooCommerce – REST API reference ---\n",
     "    # \"https://woocommerce.github.io/woocommerce-rest-api-docs/v3.html\",\n",
     "]\n",
     "\n",
     "try:\n",
-    "    ########################\n",
-    "    #### Your code here (~2-3 lines of code) ####\n",
-    "    ########################\n",
+    "    from langchain_community.document_loaders import WebBaseLoader\n",
+    "    raw_docs = WebBaseLoader(URLS).load()\n",
     "    print(f\"Fetched {len(raw_docs)} documents from the web.\")\n",
     "except Exception as e:\n",
     "    print(\"⚠️  Web fetch failed, using offline copies:\", e)\n",
     "    raw_docs = []\n",
-    "    ########################\n",
-    "    #### Your code here ####\n",
-    "    ########################   \n",
+    "\n",
+    "    from langchain_community.document_loaders import DirectoryLoader, TextLoader\n",
+    "\n",
+    "    # Put any fallback files under ./offline_docs (e.g., .md, .txt, .html)\n",
+    "    patterns = [\"**/*.md\", \"**/*.txt\", \"**/*.html\"]\n",
+    "    for pattern in patterns:\n",
+    "        try:\n",
+    "            loader = DirectoryLoader(\n",
+    "                \"offline_docs\",\n",
+    "                glob=pattern,\n",
+    "                loader_cls=TextLoader,\n",
+    "                show_progress=True,\n",
+    "                use_multithreading=True,\n",
+    "            )\n",
+    "            raw_docs.extend(loader.load())\n",
+    "        except Exception:\n",
+    "            # Skip unreadable pattern/file types quietly\n",
+    "            pass\n",
+    "\n",
     "    print(f\"Loaded {len(raw_docs)} offline documents.\")"
    ]
   },
@@ -239,15 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "450d48a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 73 chunks ready for embedding\n"
+     ]
+    }
+   ],
    "source": [
-    "chunks = []\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=300, chunk_overlap=30)\n",
+    "chunks = text_splitter.split_documents(raw_docs)\n",
     "print(f\"✅ {len(chunks)} chunks ready for embedding\")"
    ]
   },
@@ -289,18 +350,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "4a222122",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384\n"
+     ]
+    }
+   ],
    "source": [
     "embedding_vector = []\n",
+    "embeddings = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n",
     "\n",
-    "# Embed the sentence \"Hello world! and store it in an embedding_vector.\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~2 lines of code)\n",
-    "\"\"\"\n",
-    "print(len(embedding_vector))"
+    "# Single embedding for one sentence\n",
+    "embedding_vector = embeddings.embed_query(\"Hello world!\")\n",
+    "print(len(embedding_vector))\n"
    ]
   },
   {
@@ -322,10 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "611eda64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Vector store with 73 embeddings\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Build the FAISS index from the list of document chunks and their embeddings.\n",
@@ -333,9 +409,10 @@
     "    # 3. Save the vector store locally (e.g., under \"faiss_index\").\n",
     "    # 4. Print a short confirmation showing how many embeddings were stored.\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~3-5 lines of code)\n",
-    "\"\"\"\n",
+    "vectordb = FAISS.from_documents(chunks, embeddings)\n",
+    "retriever = vectordb.as_retriever(search_kwargs={\"k\": 8})\n",
+    "\n",
+    "vectordb.save_local(\"faiss_index\")\n",
     "\n",
     "print(\"✅ Vector store with\", vectordb.index.ntotal, \"embeddings\")"
    ]
@@ -368,6 +445,8 @@
     "```bash\n",
     "# macOS (Homebrew)\n",
     "brew install ollama\n",
+    "#To start ollama now and restart at login:\n",
+    "  brew services start ollama\n",
     "# Linux\n",
     "curl -fsSL https://ollama.com/install.sh | sh\n",
     "```\n",
@@ -402,18 +481,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b1d34a32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay, here's one key thing about IDFC Bank:\n",
+      "\n",
+      "**IDFC Bank is a leading private sector bank in India, particularly known for its strong focus on SME lending and digital banking solutions.**\n",
+      "\n",
+      "Do you want to know more about a specific aspect of IDFC Bank, like their lending practices, digital banking, or a particular product?\n"
+     ]
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Initialize the model (for example, gemma3:1b) with a low temperature such as 0.1 for more factual outputs.\n",
     "    # 2. Use llm.invoke() with a short test prompt and print the response to verify that the model runs successfully.\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~1-2 line of code)\n",
-    "\"\"\""
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "print(llm.invoke(\"Tell me one things about IDFC Bank\"))"
    ]
   },
   {
@@ -444,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "dcecb2b6",
    "metadata": {},
    "outputs": [],
@@ -457,7 +547,7 @@
     "1) Use ONLY the provided <context> to answer.\n",
     "2) If the answer is not in the context, say: \"I don't know based on the retrieved documents.\"\n",
     "3) Be concise and accurate. Prefer quoting key phrases from the context.\n",
-    "4) When possible, cite sources as [source: source] using the metadata.\n",
+    "4) When possible, cite sources as [source: ] using the metadata.\n",
     "\n",
     "CONTEXT:\n",
     "{context}\n",
@@ -480,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0b138b3d",
    "metadata": {},
    "outputs": [],
@@ -490,9 +580,19 @@
     "    # 2. Initialize your LLM using Ollama with the gemma3:1b model and a low temperature (e.g., 0.1) for reliable, grounded responses.\n",
     "    # 3. Build a ConversationalRetrievalChain by combining the LLM, the retriever, and your custom prompt and name it \"chain\".\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~3-5 lines of code)\n",
-    "\"\"\""
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"context\", \"question\"],\n",
+    "    template=SYSTEM_TEMPLATE,\n",
+    ")\n",
+    "\n",
+    "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "\n",
+    "chain = ConversationalRetrievalChain.from_llm(\n",
+    "    llm,\n",
+    "    retriever,\n",
+    "    combine_docs_chain_kwargs={\"prompt\": prompt},\n",
+    "    return_source_documents=True,\n",
+    ")"
    ]
   },
   {
@@ -523,10 +623,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "8f6d7a7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q: If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
+      "A: I'm not sure from the docs....\n",
+      "\n",
+      "Q: How long will delivery take for a standard order, and where can I track my package once it ships?\n",
+      "A: The V2 Shipping API allows you to manage shipping zones, shipping methods, and shipping carrier connections. The Order Shipments resource creates a shipment for an order. You can specify the shipping provider, tracking number, and shipping address ID when creating a shipment.\n",
+      "\n",
+      "The V2 Shipping API allows you to manage shipping zones, shipping method...\n",
+      "\n",
+      "Q: What's the quickest way to contact your support team, and what are your operating hours?\n",
+      "A: You can contact your support team by printed invoicesCustomers and shoppersCustomersCustomers and subscribersCreating channel-specific customersCustomer segmentationOverviewUser guidePromotions APIDefinitions & relationshipsFAQsEmailsOverviewEmail object referenceFull referenceGlobal email objectAbandoned cartAbandoned cart.\n",
+      "\n",
+      "                      ...\n"
+     ]
+    }
+   ],
    "source": [
     "test_questions = [\n",
     "    \"If I'm not happy with my purchase, what is your refund policy and how do I start a return?\",\n",
@@ -534,14 +654,11 @@
     "    \"What's the quickest way to contact your support team, and what are your operating hours?\",\n",
     "]\n",
     "\n",
-    "# Expected steps:\n",
-    "    # 1. Initialize an empty chat_history list.\n",
-    "    # 2. Loop through test_questions, pass each question and the current chat history to the chain, and append the new answer.\n",
-    "    # 3. Print each question and the LLM's response to verify it’s working correctly.\n",
-    "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE\n",
-    "\"\"\""
+    "chat_history = []\n",
+    "for q in test_questions:\n",
+    "    result = chain({\"question\": q, \"chat_history\": chat_history})\n",
+    "    chat_history.append((q, result[\"answer\"]))\n",
+    "    print(f\"\\nQ: {q}\\nA: {result['answer'][:350]}...\")"
    ]
   },
   {
@@ -568,14 +685,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "c182fb86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "app.py written\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
-    "YOUR CODE HERE\n",
-    "\"\"\""
+    "%%bash\n",
+    "cat > app.py <<'PY'\n",
+    "import pathlib, streamlit as st\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain.llms import Ollama\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "\n",
+    "st.set_page_config(page_title=\"Customer Support Chatbot\")\n",
+    "st.title(\"Customer Support Chatbot\")\n",
+    "\n",
+    "@st.cache_resource\n",
+    "def init_chain():\n",
+    "    vectordb = FAISS.load_local(\n",
+    "        \"faiss_index\",\n",
+    "        HuggingFaceEmbeddings(model_name=\"thenlper/gte-small\"),\n",
+    "        allow_dangerous_deserialization=True,\n",
+    "    )\n",
+    "    retriever = vectordb.as_retriever(search_kwargs={\"k\": 8})\n",
+    "    llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
+    "\n",
+    "    memory = ConversationBufferMemory(\n",
+    "        memory_key=\"chat_history\",\n",
+    "        return_messages=True,\n",
+    "    )\n",
+    "\n",
+    "    return ConversationalRetrievalChain.from_llm(\n",
+    "        llm,\n",
+    "        retriever,\n",
+    "        memory=memory,\n",
+    "    )\n",
+    "\n",
+    "chain = init_chain()\n",
+    "\n",
+    "if \"history\" not in st.session_state:\n",
+    "    st.session_state.history = []\n",
+    "\n",
+    "question = st.chat_input(\"What is in your mind?\")\n",
+    "if question:\n",
+    "    with st.spinner(\"Thinking...\"):\n",
+    "        response = chain(\n",
+    "            {\n",
+    "                \"question\": question,\n",
+    "                \"chat_history\": st.session_state.history,   # <- supply it\n",
+    "            }\n",
+    "        )\n",
+    "    st.session_state.history.append((question, response[\"answer\"]))\n",
+    "\n",
+    "\n",
+    "for user, bot in reversed(st.session_state.history):\n",
+    "    st.markdown(f\"**You:** {user}\")\n",
+    "    st.markdown(bot)\n",
+    "PY\n",
+    "echo \"app.py written\"\n"
    ]
   },
   {
@@ -617,7 +804,7 @@
   "kernelspec": {
    "display_name": "rag-chatbot",
    "language": "python",
-   "name": "python3"
+   "name": "rag-chatbot"
   },
   "language_info": {
    "codemirror_mode": {
@@ -629,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
