updated with the model serving process and UI call the backend

--- a/project_3/ask_the_web_agent.ipynb
+++ b/project_3/ask_the_web_agent.ipynb
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1146,6 +1146,21 @@
     "#   The agent should call `web_search`, retrieve results,\n",
     "#   and generate a short summary response.\n",
     "# ---------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "# Specify the model anme in bakcend , currently its gemma3, \n",
+    "# frontend pass the request to the backedn.\n",
+    "\n",
+    "\n",
+    "#step1- Start the model using ollama - which is firts serve the model.\n",
+    "#step2 - Create the instance and pass  the api of the server functionality and the model want to use - Need to ensure the model is running and the api is working.\n",
+    "#step2- Start the backend in python\n",
+    "#step3- Start the frontend in python\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "try:\n",
     "    agent.invoke({\"input\": \"What is BEST Flight betwwen India to UK on 10th Nov\"})\n",
